
public class GymHall {

    at.htlleonding.stirnreihe.Person head;


    public GymHall() {

    }

    public at.htlleonding.stirnreihe.Person getHead() {
        return head;
    }

    public void setHead(at.htlleonding.stirnreihe.Person head) {
        this.head = head;
    }

    public boolean isEmpty() {
        throw new RuntimeException("Not yet implemented");
    }

    public at.htlleonding.stirnreihe.Person removePersonOnFirstPosition() {
        throw new RuntimeException("Not yet implemented");
    }

    public void addPersonOnFirstPosition(at.htlleonding.stirnreihe.Person newPerson) {
        throw new RuntimeException("Not yet implemented");
    }

    // die Reihenfolge der Stirnreihe umdrehen
    public void reverseForeheadRow() {
        throw new RuntimeException("Not yet implemented");
    }


    // anhand der Größe sortieren, dh die kleinste Person ist am Anfang (head)
    public void addPersonSortedBySize(at.htlleonding.stirnreihe.Person newPerson) {
        throw new RuntimeException("Not yet implemented");
        // Wenn die Liste leer ist

        // Wenn die Liste nur ein Element hat


        // Wenn das neue Element kleiner als das erste Element ist


        // Für alle anderen Fälle


    }


}
